--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <a href="https://henriquelino17.github.io/concentra-ao-Floculante/" class="botao01">Concentrações dos Biflocs</a>
   <br>
   <br>
-  <a href="http://127.0.0.1:5500/RecuperaçaoCmai.html" class="botao02">Recuperação CMAI</a>
+  <a href="https://henriquelino17.github.io/RecuperacaoCmai/" class="botao02">Recuperação CMAI</a>
   <br>
   <br>
-  <a href="http://127.0.0.1:5500/flow.html" class="botao03">Calcular Vazão</a>
+  <a href="https://henriquelino17.github.io/flow/" class="botao03">Calcular Vazão</a>
   <br>
   <br>
-  <a href="http://127.0.0.1:5500/massaciclo.html" class="botao04">Massa Por Ciclo</a>
+  <a href="https://henriquelino17.github.io/massaciclo/" class="botao04">Massa Por Ciclo</a>
   <br>
   <br>
   <a href="https://henriquelino17.github.io/cash/" class="botao05">Consumo de floculante Real</a>
