--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Menu</title>>
+<title>Menu</title>
 <link rel="stylesheet" type="text/css" href="menu.css" media="screen" />
   
 <h1 class="page-title">
@@ -13,13 +13,21 @@
   <a href="https://henriquelino17.github.io/concentra-ao-Floculante/" class="botao01">Concentrações dos Biflocs</a>
   <br>
   <br>
+  <br>
+  <br>
   <a href="https://henriquelino17.github.io/RecuperacaoCmai/" class="botao02">Recuperação CMAI</a>
+  <br>
+  <br>
   <br>
   <br>
   <a href="https://henriquelino17.github.io/flow/" class="botao03">Calcular Vazão</a>
   <br>
   <br>
+  <br>
+  <br>
   <a href="https://henriquelino17.github.io/massaciclo/" class="botao04">Massa Por Ciclo</a>
+  <br>
+  <br>
   <br>
   <br>
   <a href="https://henriquelino17.github.io/cash/" class="botao05">Consumo de floculante Real</a>
