--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1"><br/><br/><br/><br/>
 <title>Menu</title>
 <link rel="stylesheet" type="text/css" href="menu.css" media="screen" />
   
